// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AST tests brace.svelte ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "color: {color}",
      "file": "/brace.svelte",
      "hasBOM": false,
    },
    Object {
      "css": "<script>
	let color = '#f00';
	let value
</script>
<input class:over-100={value > 100} bind:value={value} style=\\"color: {color}\\">
<input class:over-100={  ((value > 100) )  } bind:value={value} style=\\"color: {color}\\">
",
      "file": "/brace.svelte",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "color",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 76,
              "line": 5,
              "offset": 126,
            },
            "inputId": 0,
            "start": Object {
              "column": 63,
              "line": 5,
              "offset": 113,
            },
          },
          "type": "decl",
          "value": "{color}",
        },
      ],
      "raws": Object {
        "after": "",
        "codeAfter": "\\">
<input class:over-100={  ((value > 100) )  } bind:value={value} style=\\"color: {color}\\">
",
        "codeBefore": "<script>
	let color = '#f00';
	let value
</script>
<input class:over-100={value > 100} bind:value={value} style=\\"",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 63,
          "line": 5,
          "offset": 113,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests empty-tags.html ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "",
      "file": "/empty-tags.html",
      "hasBOM": false,
    },
    Object {
      "css": "",
      "file": "/empty-tags.html",
      "hasBOM": false,
    },
    Object {
      "css": "<style></style>
<style></style>
",
      "file": "/empty-tags.html",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [],
      "raws": Object {
        "after": "",
        "codeBefore": "<style>",
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 8,
          "line": 1,
          "offset": 7,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [],
      "raws": Object {
        "after": "",
        "codeAfter": "</style>
",
        "codeBefore": "</style>
<style>",
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 8,
          "line": 2,
          "offset": 23,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests ignore-comment.vue ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "color: blue",
      "file": "/ignore-comment.vue",
      "hasBOM": false,
    },
    Object {
      "css": "color: green",
      "file": "/ignore-comment.vue",
      "hasBOM": false,
    },
    Object {
      "css": "color: white",
      "file": "/ignore-comment.vue",
      "hasBOM": false,
    },
    Object {
      "css": "color: brack",
      "file": "/ignore-comment.vue",
      "hasBOM": false,
    },
    Object {
      "css": "color: yellow",
      "file": "/ignore-comment.vue",
      "hasBOM": false,
    },
    Object {
      "css": ".b {
  color: red;
}
",
      "file": "/ignore-comment.vue",
      "hasBOM": false,
    },
    Object {
      "css": ".c {
  color: red;
}
",
      "file": "/ignore-comment.vue",
      "hasBOM": false,
    },
    Object {
      "css": "<template>
  <div>
    <!--postcss-ignore-->
    <div style=\\"color: red\\">
      <div style=\\"color: blue\\">
      </div>
    </div>
    <!--postcss-ignore-->
    <input>
    <div style=\\"color: green\\">
    </div>
    <!--postcss-ignore-->
    <div></div>
    <div style=\\"color: white\\">
    </div>
    <div><!--postcss-ignore--></div>
    <div style=\\"color: brack\\">
    </div>
    <!--postcss-ignore--><!--foo-->
    <div style=\\"color: yellow\\">
    </div>
  </div>
</template>

<!--postcss-ignore-->
<style>
a {
  color: red;
}
</style>

<style>
.b {
  color: red;
}
</style>

<!--postcss-ignore-->
<script lang=\\"ts\\">
</script>

<style>
.c {
  color: red;
}
</style>
",
      "file": "/ignore-comment.vue",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "color",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 29,
              "line": 5,
              "offset": 102,
            },
            "inputId": 0,
            "start": Object {
              "column": 19,
              "line": 5,
              "offset": 92,
            },
          },
          "type": "decl",
          "value": "blue",
        },
      ],
      "raws": Object {
        "after": "",
        "codeBefore": "<template>
  <div>
    <!--postcss-ignore-->
    <div style=\\"color: red\\">
      <div style=\\"",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 19,
          "line": 5,
          "offset": 92,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "color",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 28,
              "line": 10,
              "offset": 195,
            },
            "inputId": 0,
            "start": Object {
              "column": 17,
              "line": 10,
              "offset": 184,
            },
          },
          "type": "decl",
          "value": "green",
        },
      ],
      "raws": Object {
        "after": "",
        "codeBefore": "\\">
      </div>
    </div>
    <!--postcss-ignore-->
    <input>
    <div style=\\"",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 17,
          "line": 10,
          "offset": 184,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "color",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 28,
              "line": 14,
              "offset": 279,
            },
            "inputId": 0,
            "start": Object {
              "column": 17,
              "line": 14,
              "offset": 268,
            },
          },
          "type": "decl",
          "value": "white",
        },
      ],
      "raws": Object {
        "after": "",
        "codeBefore": "\\">
    </div>
    <!--postcss-ignore-->
    <div></div>
    <div style=\\"",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 17,
          "line": 14,
          "offset": 268,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "color",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 28,
              "line": 17,
              "offset": 358,
            },
            "inputId": 0,
            "start": Object {
              "column": 17,
              "line": 17,
              "offset": 347,
            },
          },
          "type": "decl",
          "value": "brack",
        },
      ],
      "raws": Object {
        "after": "",
        "codeBefore": "\\">
    </div>
    <div><!--postcss-ignore--></div>
    <div style=\\"",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 17,
          "line": 17,
          "offset": 347,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "color",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 29,
              "line": 20,
              "offset": 437,
            },
            "inputId": 0,
            "start": Object {
              "column": 17,
              "line": 20,
              "offset": 425,
            },
          },
          "type": "decl",
          "value": "yellow",
        },
      ],
      "raws": Object {
        "after": "",
        "codeBefore": "\\">
    </div>
    <!--postcss-ignore--><!--foo-->
    <div style=\\"",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 17,
          "line": 20,
          "offset": 425,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 34,
                  "offset": 559,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 34,
                  "offset": 549,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".b",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 35,
              "offset": 561,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 33,
              "offset": 542,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "\\">
    </div>
  </div>
</template>

<!--postcss-ignore-->
<style>
a {
  color: red;
}
</style>

<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 33,
          "offset": 542,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 13,
                  "line": 44,
                  "offset": 650,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 44,
                  "offset": 640,
                },
              },
              "type": "decl",
              "value": "red",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".c",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 45,
              "offset": 652,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 43,
              "offset": 633,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "</style>
",
        "codeBefore": "</style>

<!--postcss-ignore-->
<script lang=\\"ts\\">
</script>

<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 43,
          "offset": 633,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests lang-postcss.vue ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "a {
a {
color: red
}
}
",
      "file": "/lang-postcss.vue",
      "hasBOM": false,
    },
    Object {
      "css": "<template>
</template>
<style lang=\\"postcss\\">
a {
a {
color: red
}
}
</style>
",
      "file": "/lang-postcss.vue",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "indexes": Object {},
              "lastEach": 1,
              "nodes": Array [
                Object {
                  "prop": "color",
                  "raws": Object {
                    "before": "
",
                    "between": ": ",
                  },
                  "source": Object {
                    "end": Object {
                      "column": 10,
                      "line": 6,
                      "offset": 63,
                    },
                    "inputId": 0,
                    "start": Object {
                      "column": 1,
                      "line": 6,
                      "offset": 54,
                    },
                  },
                  "type": "decl",
                  "value": "red",
                },
              ],
              "raws": Object {
                "after": "
",
                "before": "
",
                "between": " ",
                "semicolon": false,
              },
              "selector": "a",
              "source": Object {
                "end": Object {
                  "column": 1,
                  "line": 7,
                  "offset": 65,
                },
                "inputId": 0,
                "start": Object {
                  "column": 1,
                  "line": 5,
                  "offset": 50,
                },
              },
              "type": "rule",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": false,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 8,
              "offset": 67,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 46,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "</style>
",
        "codeBefore": "<template>
</template>
<style lang=\\"postcss\\">
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 4,
          "offset": 46,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests test.html ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "			a {
				display: flex;
			}
",
      "file": "/test.html",
      "hasBOM": false,
    },
    Object {
      "css": "font-family: serif serif",
      "file": "/test.html",
      "hasBOM": false,
    },
    Object {
      "css": "<!DOCTYPE html>
<html>
	<head>
		<style type=\\"text/css\\">
			a {
				display: flex;
			}
		</style>
	</head>
	<body>
		<div style=\\"font-family: serif serif\\"></div>
	</body>
</html>
",
      "file": "/test.html",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "display",
              "raws": Object {
                "before": "
				",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 18,
                  "line": 6,
                  "offset": 81,
                },
                "inputId": 0,
                "start": Object {
                  "column": 5,
                  "line": 6,
                  "offset": 68,
                },
              },
              "type": "decl",
              "value": "flex",
            },
          ],
          "raws": Object {
            "after": "
			",
            "before": "			",
            "between": " ",
            "semicolon": true,
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 4,
              "line": 7,
              "offset": 86,
            },
            "inputId": 0,
            "start": Object {
              "column": 4,
              "line": 5,
              "offset": 60,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeBefore": "<!DOCTYPE html>
<html>
	<head>
		<style type=\\"text/css\\">
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 5,
          "offset": 57,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "font-family",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 38,
              "line": 11,
              "offset": 153,
            },
            "inputId": 0,
            "start": Object {
              "column": 15,
              "line": 11,
              "offset": 130,
            },
          },
          "type": "decl",
          "value": "serif serif",
        },
      ],
      "raws": Object {
        "after": "",
        "codeAfter": "\\"></div>
	</body>
</html>
",
        "codeBefore": "		</style>
	</head>
	<body>
		<div style=\\"",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 15,
          "line": 11,
          "offset": 130,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests test.svelte ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "color: {color}; --opacity: {bgOpacity};",
      "file": "/test.svelte",
      "hasBOM": false,
    },
    Object {
      "css": "color: {color}",
      "file": "/test.svelte",
      "hasBOM": false,
    },
    Object {
      "css": "<script>
	let bgOpacity = 0.5;
	$: color = bgOpacity < 0.6 ? '#000' : '#fff';
</script>
<p style=\\"color: {color}; --opacity: {bgOpacity};\\">This is a paragraph.</p>
<p style=\\"color: {color}\\">This is a paragraph.</p>
",
      "file": "/test.svelte",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "color",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 25,
              "line": 5,
              "offset": 112,
            },
            "inputId": 0,
            "start": Object {
              "column": 11,
              "line": 5,
              "offset": 98,
            },
          },
          "type": "decl",
          "value": "{color}",
        },
        Object {
          "prop": "--opacity",
          "raws": Object {
            "before": " ",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 49,
              "line": 5,
              "offset": 136,
            },
            "inputId": 0,
            "start": Object {
              "column": 27,
              "line": 5,
              "offset": 114,
            },
          },
          "type": "decl",
          "value": "{bgOpacity}",
        },
      ],
      "raws": Object {
        "after": "",
        "codeBefore": "<script>
	let bgOpacity = 0.5;
	$: color = bgOpacity < 0.6 ? '#000' : '#fff';
</script>
<p style=\\"",
        "semicolon": true,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 11,
          "line": 5,
          "offset": 98,
        },
      },
      "type": "root",
    },
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "color",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 24,
              "line": 6,
              "offset": 187,
            },
            "inputId": 0,
            "start": Object {
              "column": 11,
              "line": 6,
              "offset": 174,
            },
          },
          "type": "decl",
          "value": "{color}",
        },
      ],
      "raws": Object {
        "after": "",
        "codeAfter": "\\">This is a paragraph.</p>
",
        "codeBefore": "\\">This is a paragraph.</p>
<p style=\\"",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 11,
          "line": 6,
          "offset": 174,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests test.vue ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": ".add-button {
  color: v-bind(buttonColor);
  pointer-events: v-bind(\\"inputValue ? 'initial' : 'none'\\");
}
.todo-list {
  list-style: none;
}
.todo-item {
  background-color: #eef;
}
.todo-item--done {
  background-color: #3fb983;
  color: #fff;
}
",
      "file": "/test.vue",
      "hasBOM": false,
    },
    Object {
      "css": "<template>
  <input v-model=\\"inputValue\\" />
  <button @click=\\"handleClick\\" class=\\"add-button\\">Add ToDo</button>
  <ul class=\\"todo-list\\">
    <li
      v-for=\\"(todo, index) in todoItems\\"
      :key=\\"todo.id\\"
      class=\\"todo-item\\"
      :class=\\"{ 'todo-item--done': todo.done }\\"
      @click=\\"todo.done = !todo.done\\"
    >
      <span v-if=\\"todo.done\\">✓</span> {{ todo.text }}
    </li>
  </ul>
</template>
<script setup>
import { ref, computed } from \\"vue\\"
const inputValue = ref(\\"\\")
const todoItems = ref([])

function handleClick() {
  todoItems.value.push({
    id: Math.random().toString(36).slice(-8),
    done: false,
    text: inputValue.value,
  })
  inputValue.value = \\"\\"
}

const buttonColor = computed(() => (inputValue ? \\"black\\" : \\"white\\"));
const buttonPointerEvents = computed(() =>
  inputValue.value ? \\"initial\\" : \\"none\\"
);
</script>
<style>
.add-button {
  color: v-bind(buttonColor);
  pointer-events: v-bind(\\"inputValue ? 'initial' : 'none'\\");
}
.todo-list {
  list-style: none;
}
.todo-item {
  background-color: #eef;
}
.todo-item--done {
  background-color: #3fb983;
  color: #fff;
}
</style>
",
      "file": "/test.vue",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 29,
                  "line": 37,
                  "offset": 901,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 37,
                  "offset": 875,
                },
              },
              "type": "decl",
              "value": "v-bind(buttonColor)",
            },
            Object {
              "prop": "pointer-events",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 60,
                  "line": 38,
                  "offset": 962,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 38,
                  "offset": 905,
                },
              },
              "type": "decl",
              "value": "v-bind(\\"inputValue ? 'initial' : 'none'\\")",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".add-button",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 39,
              "offset": 964,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 36,
              "offset": 859,
            },
          },
          "type": "rule",
        },
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "list-style",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 19,
                  "line": 41,
                  "offset": 997,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 41,
                  "offset": 981,
                },
              },
              "type": "decl",
              "value": "none",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "
",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".todo-list",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 42,
              "offset": 999,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 40,
              "offset": 966,
            },
          },
          "type": "rule",
        },
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "background-color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 25,
                  "line": 44,
                  "offset": 1038,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 44,
                  "offset": 1016,
                },
              },
              "type": "decl",
              "value": "#eef",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "
",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".todo-item",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 45,
              "offset": 1040,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 43,
              "offset": 1001,
            },
          },
          "type": "rule",
        },
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [
            Object {
              "prop": "background-color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 28,
                  "line": 47,
                  "offset": 1088,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 47,
                  "offset": 1063,
                },
              },
              "type": "decl",
              "value": "#3fb983",
            },
            Object {
              "prop": "color",
              "raws": Object {
                "before": "
  ",
                "between": ": ",
              },
              "source": Object {
                "end": Object {
                  "column": 14,
                  "line": 48,
                  "offset": 1103,
                },
                "inputId": 0,
                "start": Object {
                  "column": 3,
                  "line": 48,
                  "offset": 1092,
                },
              },
              "type": "decl",
              "value": "#fff",
            },
          ],
          "raws": Object {
            "after": "
",
            "before": "
",
            "between": " ",
            "semicolon": true,
          },
          "selector": ".todo-item--done",
          "source": Object {
            "end": Object {
              "column": 1,
              "line": 49,
              "offset": 1105,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 46,
              "offset": 1042,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "</style>
",
        "codeBefore": "<template>
  <input v-model=\\"inputValue\\" />
  <button @click=\\"handleClick\\" class=\\"add-button\\">Add ToDo</button>
  <ul class=\\"todo-list\\">
    <li
      v-for=\\"(todo, index) in todoItems\\"
      :key=\\"todo.id\\"
      class=\\"todo-item\\"
      :class=\\"{ 'todo-item--done': todo.done }\\"
      @click=\\"todo.done = !todo.done\\"
    >
      <span v-if=\\"todo.done\\">✓</span> {{ todo.text }}
    </li>
  </ul>
</template>
<script setup>
import { ref, computed } from \\"vue\\"
const inputValue = ref(\\"\\")
const todoItems = ref([])

function handleClick() {
  todoItems.value.push({
    id: Math.random().toString(36).slice(-8),
    done: false,
    text: inputValue.value,
  })
  inputValue.value = \\"\\"
}

const buttonColor = computed(() => (inputValue ? \\"black\\" : \\"white\\"));
const buttonPointerEvents = computed(() =>
  inputValue.value ? \\"initial\\" : \\"none\\"
);
</script>
<style>
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 36,
          "offset": 859,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests test2.svelte ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "color: {color}; {styleOpacity}",
      "file": "/test2.svelte",
      "hasBOM": false,
    },
    Object {
      "css": "<script>
	let bgOpacity = 0.5;
	$: color = bgOpacity < 0.6 ? '#000' : '#fff';
	$: styleOpacity = \`--opacity: \${bgOpacity};\`
</script>
<p style=\\"color: {color}; {styleOpacity}\\">This is a paragraph.</p>
",
      "file": "/test2.svelte",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "prop": "color",
          "raws": Object {
            "before": "",
            "between": ": ",
          },
          "source": Object {
            "end": Object {
              "column": 25,
              "line": 6,
              "offset": 158,
            },
            "inputId": 0,
            "start": Object {
              "column": 11,
              "line": 6,
              "offset": 144,
            },
          },
          "type": "decl",
          "value": "{color}",
        },
      ],
      "raws": Object {
        "after": " {styleOpacity}",
        "codeAfter": "\\">This is a paragraph.</p>
",
        "codeBefore": "<script>
	let bgOpacity = 0.5;
	$: color = bgOpacity < 0.6 ? '#000' : '#fff';
	$: styleOpacity = \`--opacity: \${bgOpacity};\`
</script>
<p style=\\"",
        "semicolon": true,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 11,
          "line": 6,
          "offset": 144,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;

exports[`AST tests unknown-lang.vue ast 1`] = `
Object {
  "inputs": Array [
    Object {
      "css": "a {}
",
      "file": "/unknown-lang.vue",
      "hasBOM": false,
    },
    Object {
      "css": "<template>
</template>
<script setup>
</script>
<style lang=\\"unknown\\">
unknown////
</style>
<style lang=\\"css\\">
a {}
</style>
",
      "file": "/unknown-lang.vue",
      "hasBOM": false,
    },
  ],
  "nodes": Array [
    Object {
      "document": "$document",
      "indexes": Object {},
      "lastEach": 1,
      "nodes": Array [
        Object {
          "indexes": Object {},
          "lastEach": 1,
          "nodes": Array [],
          "raws": Object {
            "after": "",
            "before": "",
            "between": " ",
          },
          "selector": "a",
          "source": Object {
            "end": Object {
              "column": 4,
              "line": 9,
              "offset": 114,
            },
            "inputId": 0,
            "start": Object {
              "column": 1,
              "line": 9,
              "offset": 111,
            },
          },
          "type": "rule",
        },
      ],
      "raws": Object {
        "after": "
",
        "codeAfter": "</style>
",
        "codeBefore": "<template>
</template>
<script setup>
</script>
<style lang=\\"unknown\\">
unknown////
</style>
<style lang=\\"css\\">
",
        "semicolon": false,
      },
      "source": Object {
        "end": undefined,
        "inputId": 0,
        "start": Object {
          "column": 1,
          "line": 9,
          "offset": 111,
        },
      },
      "type": "root",
    },
  ],
  "raws": Object {},
  "source": Object {
    "end": undefined,
    "inputId": 0,
    "start": Object {
      "column": 1,
      "line": 1,
    },
  },
  "type": "document",
}
`;
